<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="7dp"
    android:paddingEnd="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingStart="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="11dp"
        android:layout_marginTop="25dp"
        android:text="@string/fake_pop_up"
        android:textColor="@color/colorPrimary"
        android:textSize="23sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:paddingBottom="25dp"
        android:text="@string/fake_pop_up_part_one"
        android:textColor="@color/black" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginBottom="25dp"
        android:background="@drawable/screenshot"
        android:contentDescription="@string/app_crushed_dialog"
        android:scaleType="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:paddingBottom="20dp"
        android:text="@string/fake_pop_up_part_two"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="27dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_part_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fake_pop_up_part_three"
            android:textColor="@color/black" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/positiveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="23dp"
            android:padding="10dp"
            android:text="@string/ok"
            android:textColor="@color/colorPrimary" />
    </RelativeLayout>
</LinearLayout>